Add nginx proxy to master node

--- a/roles/kubernetes/node/templates/kube-proxy-kubeconfig.yaml.j2
+++ b/roles/kubernetes/node/templates/kube-proxy-kubeconfig.yaml.j2
@@ -4,7 +4,11 @@ clusters:
 - name: local
   cluster:
     certificate-authority: {{ kube_cert_dir }}/ca.pem
+{% if loadbalancer_apiserver_localhost %}
+    server: https://localhost:{{ nginx_kube_apiserver_port|default(kube_apiserver_port) }}
+{% else %}
     server: {{ kube_apiserver_endpoint }}
+{% endif %}
 users:
 - name: kube-proxy
   user:
